# chosys

./: .clangd  .gitignore  .gitmodules  README.md  build.sh  flake.nix  notes.md
examples/: Foo.mlir
nix/: overlay.nix
rtlil-emit/: CMakeLists.txt  CMakePresets.json  rtlil-emit.cpp
rtlil-emit/example/: .gitignore  README.md  cpu.il  cpu.noattr.il  cpu2.mlir  demo.ys  demo2.ys  not.mlir
rtlil-emit/test/: .gitignore  Makefile
rtlil-emit/test/test1/: input.mlir  script.ys  tb.v
rtlil-emit/test/test2/: GCD.mlir  script.ys  tb.v
